[project]
name = "plane-api"
version = "1.21.1"
description = "Open-source project management that unlocks customer value - Django backend component"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4~=4.12.0",
    "boto3~=1.34.96",
    "celery~=5.4.0",
    "channels~=4.1.0",
    "cryptography~=44.0.1",
    "dj-database-url~=2.1.0",
    "django~=4.2.27",
    "django-celery-beat~=2.6.0",
    "django-celery-results~=2.5.1",
    "django-cors-headers~=4.3.1",
    "django-crum~=0.7.9",
    "django-filter~=24.2.0",
    "django-redis~=5.4.0",
    "django-storages~=1.14.2",
    "djangorestframework~=3.15.2",
    "drf-spectacular~=0.28.0",
    "faker~=25.0.0",
    "gunicorn~=23.0.0",
    "jsonmodels~=2.7.0",
    "lxml~=6.0.0",
    "nh3~=0.2.18",
    "openai~=1.63.2",
    "openpyxl~=3.1.2",
    "opentelemetry-api~=1.28.1",
    "opentelemetry-exporter-otlp~=1.28.1",
    "opentelemetry-instrumentation-django~=0.49b1",
    "opentelemetry-sdk~=1.28.1",
    "posthog~=3.5.0",
    "psycopg[binary]~=3.3.2",
    "pyjwt~=2.8.0",
    "pymongo~=4.6.3",
    "python-json-logger~=3.3.0",
    "pytz~=2024.1",
    "redis~=5.0.4",
    "scout-apm~=3.1.0",
    "slack-sdk~=3.27.1",
    "uvicorn~=0.29.0",
    "whitenoise~=6.11.0",
    "zxcvbn~=4.4.28",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "**/migrations/*",
]

# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
# skip-magic-trailing-comma = true

# Automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pep8-naming]
# Allow lowercase variables like "id"
classmethod-decorators = ["classmethod", "validator", "root_validator"]

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules for tests
"tests/*" = ["E402", "F401", "F811"]
# Ignore imported but unused in __init__.py files
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true
force-wrap-aliases = true
known-first-party = ["plane"]
known-third-party = ["rest_framework"]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8
max-statements = 50

[dependency-groups]
local = [
    "django-debug-toolbar==4.3.0",
    "ruff==0.9.7",
]
test = [
    "coverage==7.2.7",
    "factory-boy==3.3.0",
    "freezegun==1.2.2",
    "httpx==0.24.1",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "pytest-django==4.5.2",
    "pytest-mock==3.11.1",
    "pytest-xdist==3.3.1",
    "requests==2.32.4",
]
